--- a/style.css
+++ b/style.css
@@ -18,8 +18,10 @@ header{
 }
 
 body{
-  background: rgb(34,193,195);
-  background: linear-gradient(312deg, rgba(34,193,195,1) 0%, rgba(224,242,239,0.4184515449438202) 54%, rgba(8,245,205,0.3847436797752809) 100%);
+  background: rgb(98,130,153);
+  background: radial-gradient(circle, rgba(98,130,153,1) 0%, rgba(255,255,255,1) 22%, rgba(31,188,232,1) 50%, rgba(255,255,255,1) 73%, rgba(98,130,153,1) 100%);
+
+
 }
 
 #contenedor1{
