--- a/style1.css
+++ b/style1.css
@@ -11,8 +11,9 @@
 
 #jstext {
     text-align: center;
-    font-size: 1.5em;
+    font-size: 2.5em;
     font-weight: bold;
+    text-shadow: 3px 3px 2px rgb(235, 201, 8);
   }
 
 body{
